--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="toggle-btn" onclick="toggleMode()">🌞 Ganti Mode</button>
     </div>
 
-    <script> <a href="script.js"> </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
